CloudAlpacas/salesforce/main/default/objects/SD_Analytics_CaseUpdate__c/SD_Analytics_CaseUpdate__c.object-meta.xml
<CustomObject>
    <description>Staging object for Case Update analytics data. Mirrors the ssot__CaseUpdate__dlm Data Model Object to support fake data creation and Data Cloud ingestion for the Service Insights dashboard.</description>
    <label>SD Analytics Case Update</label>
    <nameField>
        <displayFormat>SDCU-{0000}</displayFormat>
        <label>SD Analytics Case Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SD Analytics Case Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>