CloudAlpacas/salesforce/main/default/objects/SD_Analytics_CaseUpdate__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Case record. Used to link this Case Update staging record to its parent Case, mirroring ssot__CaseId__c on ssot__CaseUpdate__dlm.</description>
    <inlineHelpText>Select the Case this update belongs to. Used to join CaseUpdate data to Case in Data Cloud.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SD Analytics Case Updates</relationshipLabel>
    <relationshipName>SD_Analytics_Case_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>