CloudAlpacas/salesforce/main/default/objects/SD_Analytics_CaseUpdate__c/fields/Last_Modified_By_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User who made this case update. Mirrors ssot__LastModifiedById__c on ssot__CaseUpdate__dlm.</description>
    <inlineHelpText>User who performed this status change on the Case.</inlineHelpText>
    <label>Last Modified By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>SD Analytics Case Updates (Last Modified)</relationshipLabel>
    <relationshipName>SD_Analytics_Case_Updates_Modified</relationshipName>
    <type>Lookup</type>
</CustomField>