CloudAlpacas/salesforce/main/default/objects/SD_Analytics_CaseUpdate__c/fields/Previous_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Update_Date__c</fullName>
    <description>The datetime of the previous status update before this one. Mirrors ssot__PreviousUpdateDateTime__c on ssot__CaseUpdate__dlm. This is the key field used by the BH_TimeToFirstClose_clc formula via MIN([Case Update].[Previous Update Date]).</description>
    <inlineHelpText>Timestamp of the prior status change. For Closed rows, represents the moment just before case was closed — used for time-to-close calculation.</inlineHelpText>
    <label>Previous Update Date</label>
    <type>DateTime</type>
</CustomField>